--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <html>
 <head>
 <title>Caden Holley</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body bgcolor="black" text="white">
-<h2>Caden Holley</h2>
+  <center><h2>Caden Holley</h2></center>
 <p>Website coming soon.... </p>
 </body>
 </html>
